Bug 235915, RemovePage method is no longer part of nsIBrowserHistory interface, patch by bsmedsberg, r=mconnor